--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: pygments
 # 分页配置，每页最多显示几篇文章
 paginate: 5
+gems: [jekyll-paginate]
  
 # 首页显示的分隔符
 excerpt_separator: "\n\n"
