2015-07-16 修改样式：Redcarpet 扩展 smart & blockquote p 样式修改

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ encoding: utf-8
 markdown: redcarpet
 
 redcarpet:
- extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "footnotes", "footnote_ref"]
+    extensions: ["smart", "no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "footnotes", "footnote_ref"]
 
 # 修改为自己的配置
 title : 电力引领生活
